inital docs commit

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,17 +1,17 @@
 SDCC=sdcc
 SDLD=sdld
-OBJECT=blinky.ihx
+OBJECT=halo.ihx
 
 .PHONY: all clean flash
 
 all: $(OBJECT)
 
 clean:
-	rm -f $(OBJECT)
+	rm -f $(OBJECT) *.cdb *.adb *.asm *.li *.lst *.map *.rel *.rst *.sym *.lk
 
 flash: $(OBJECT)
-	STVP_CmdLine.exe -Device=STM8L15xG6 -FileProg=$(OBJECT) -verif -no_loop
-	# stm8flash -cstlink -pstm8l150 -w $(OBJECT).ihx
+	STVP_CmdLine.exe -Device=STM8L15xG4 -FileProg=$(OBJECT) -verif -no_loop -no_log
+	# stm8flash -cstlink -pstm8l150 -w $(OBJECT)
 
 %.ihx: %.c
 	$(SDCC) -lstm8 -mstm8 --out-fmt-ihx --debug $(CFLAGS) $(LDFLAGS) $<
