fix: makefile: Autodetect installed commands didn't work
The makefile command `$(command …)` did not work as expected and
returned always nothing. Only by appending `shell` the command gets
actually executed and is able to return a path if the command is
available.

Signed-off-by: Sophie 'Tyalie' Friedrich <dev@flowerpot.me>

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -10,10 +10,10 @@ clean:
 	rm -f $(OBJECT) *.cdb *.adb *.asm *.li *.lst *.map *.rel *.rst *.sym *.lk
 
 flash: $(OBJECT)
-ifeq (,$(command -v STVP_CmdLine.exe))
+ifneq (, $(shell command -v STVP_CmdLine.exe;))
 	STVP_CmdLine.exe -Device=STM8L15xG4 -FileProg=$(OBJECT) -verif -no_loop -no_log
-else ifeq (,$(command -v stm8flash))
-	stm8flash -cstlink -pstm8l151 -w $(OBJECT)
+else ifneq (, $(shell command -v stm8flash;))
+	stm8flash -cstlink -p"stm8l151?2" -w $(OBJECT)
 else
 	@echo "STVP_CmdLine or stm8flash not found"
 endif
