feat: Setup better build system with Make
This allows us to have multiple files and a build directory, which makes
cleaning significantly easier in the long run.

Also introduced debug build which generates a .elf file

Signed-off-by: Sophie 'Tyalie' Friedrich <dev@flowerpot.me>

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,24 +1,44 @@
-SDCC=sdcc
-SDLD=sdld
-OBJECT=halo.ihx
+SOURCEDIR = src
+BUILDDIR = build
+INCLUDEDIR = include
+
+LDCC := sdcc
+CFLAGS := -lstm8 -mstm8
+
+FIRMWARE_IMAGE = $(BUILDDIR)/halo-fw.ihx
+
+DEBUG_FW_IMAGE = $(patsubst $(BUILDDIR)/%.ihx,$(BUILDDIR)/%.elf,$(FIRMWARE_IMAGE))
+SOURCES = $(wildcard $(SOURCEDIR)/*.c)
+OBJECTS = $(patsubst $(SOURCEDIR)/%.c,$(BUILDDIR)/%.rel,$(SOURCES))
 
 .PHONY: all clean flash
 
-all: $(OBJECT)
+all: $(FIRMWARE_IMAGE)
 
 clean:
-	rm -f $(OBJECT) *.cdb *.adb *.asm *.li *.lst *.map *.rel *.rst *.sym *.lk
+	@echo "Cleaning up '$(BUILDDIR)' directory"
+	rm -r $(BUILDDIR)
 
-flash: $(OBJECT)
+flash: $(FIRMWARE_IMAGE)
 ifneq (, $(shell command -v STVP_CmdLine.exe;))
-	STVP_CmdLine.exe -Device=STM8L15xG4 -FileProg=$(OBJECT) -verif -no_loop -no_log
+	STVP_CmdLine.exe -Device=STM8L15xG4 -FileProg=$(FIRMWARE_IMAGE) -verif -no_loop -no_log
 else ifneq (, $(shell command -v stm8flash;))
-	stm8flash -cstlink -p"stm8l151?2" -w $(OBJECT)
+	stm8flash -cstlinkv2 -p"stm8l151?4" -w $(FIRMWARE_IMAGE)
 else
 	@echo "STVP_CmdLine or stm8flash not found"
 endif
-	
-	
 
-%.ihx: %.c
-	$(SDCC) -lstm8 -mstm8 --out-fmt-ihx --debug $(CFLAGS) $(LDFLAGS) $<
+debug: CFLAGS += --debug
+debug: $(DEBUG_FW_IMAGE)
+
+$(BUILDDIR):
+	@mkdir -p build
+
+$(OBJECTS): $(BUILDDIR)/%.rel : $(SOURCEDIR)/%.c | $(BUILDDIR)
+	$(LDCC) $(CFLAGS) -I$(INCLUDEDIR) $(LDFLAGS) -c $< -o $@
+
+$(FIRMWARE_IMAGE): $(OBJECTS) | $(BUILDDIR)
+	$(LDCC) $(CFLAGS) --out-fmt-ihx $^ -o $@
+
+$(DEBUG_FW_IMAGE): $(OBJECTS) | $(BUILDDIR)
+	$(LDCC) $(CFLAGS) --out-fmt-elf $^ -o $@
